--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<!-- linking to styles -->
 		<link rel="stylesheet" type="text/css" href="styles.css">
 		<title>Kariuki's portfolio</title>
-		<link rel="icon"  class="fas fa-atlas">
+		<link rel="icon" src="res/me1.jpg">
 		<link rel="stylesheet" type="text/css" href="font/">
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/2.9.7/jquery.fullpage.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
