--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 				<h3 class="text-center" style=" color: #000;">Contact me</h3>
 				<div class="text-center">
 					<a class="fab fa-github logo-git" target="_blank" href="https://github.com/Carrieukie"></a>
-					<a class="fab fa-linkedin logo-in" target="_blank" href="www.linkedin.com/in/eric-kariuki-karis"></a>
+					<a class="fab fa-linkedin logo-in" target="_blank" href="https://www.linkedin.com/in/eric-kariuki-karis/"></a>
 					<a class="fab fa-instagram logo-ins" target="_blank" href="https://www.instagram.com/carrieukie/"></a>
 				</div>
 				<div class="text-center ">
